welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:15: error: reassignment to val
      y=y-1
       ^